# proj1ComputerGraphics

./: README.md  frag.glsl  vert.glsl
Dependencies/GLFW/include/Shader/: shader.h
Dependencies/GLFW/include/csci441/: matrix4.h  vector4.h
Dependencies/GLFW/include/glad/: glad.h
labs/: README.md
labs/lab7/: CMakeLists.txt  README.md  camera.h  frag.glsl  main.cpp  shape.h  vert.glsl
labs/lab7/img/: README.md
models/: maze.obj source
project1/src/: glad.c  main.cpp  model.h  renderer.h  shape.h  vec3.h
projs/proj1/: README.md
